--- a/frontend/src/features/Header/Header.scss
+++ b/frontend/src/features/Header/Header.scss
@@ -5,43 +5,40 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #ffb5ca;
+    background-color: rgba(66, 51, 46, 0.7);
     width: 100%;
     height: 80px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 45px,
-      rgba(0, 0, 0, 0.12) 0px -12px 25px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    border-radius: 20px;
+    border-top: 1px solid #584f4b;
+    border-left: 1px solid #584f4b;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.5);
     margin-top: 10px;
+    box-sizing: border-box;
   }
   &__logo {
     margin-left: 50px;
+    width: 70px;
   }
   &__list {
     list-style: none;
     display: flex;
     &-item {
       margin-right: 50px;
-      background-color: #ffb5ca;
-      box-shadow: 7px 7px 10px #de9db0, -7px -7px 10px #ffcde4;
-      border-radius: 10px;
       height: 40px;
       padding: 0 10px;
-      color: white;
+      color: #e1cdb6;
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
       display: flex;
       align-items: center;
       transition: all 0.3s ease-in-out;
       &.active {
-        color: aquamarine;
-        box-shadow: 1px 1px 5px #de9db0, -1px -1px 5px #ffcde4;
+        border-bottom: 1px solid #e1cdb6;
       }
-
       text-decoration: none;
 
       &:hover {
         cursor: pointer;
-        color: rgb(248, 228, 127);
-        box-shadow: 1px 1px 5px #de9db0, -1px -1px 5px #ffcde4;
+        color: #e1cdb6;
+        border-bottom: 1px solid #e1cdb6;
       }
     }
   }
