--- a/frontend/src/features/Header/Header.scss
+++ b/frontend/src/features/Header/Header.scss
@@ -62,3 +62,12 @@
     }
   }
 }
+.hi {
+  margin: 0 10px;
+  color: #e1cdb6;
+  display: flex;
+  align-items: center;
+  position: relative;
+  transition: 1s;
+  text-decoration: none;
+}
