--- a/frontend/src/features/questions2/QuestionCard2.scss
+++ b/frontend/src/features/questions2/QuestionCard2.scss
@@ -10,6 +10,7 @@
   &__topic {
     width: 19%;
     margin-bottom: 1em;
+    margin-top: -1em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,7 +24,7 @@
     text-align: center;
     height: 150px;
     font-weight: 500;
-    font-size: 3em;
+    font-size: 1.5em;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
   }
   &__quest {
@@ -117,4 +118,7 @@ button:hover {
   border: 1px solid #a89a89;
   background: transparent;
   box-sizing: border-box;
+}
+.form_card {
+  width: 19%;
 }
