--- a/frontend/src/features/Main/MainPage.scss
+++ b/frontend/src/features/Main/MainPage.scss
@@ -10,6 +10,7 @@
   &__topic {
     width: 19%;
     margin-bottom: 1em;
+    margin-top: -1em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -117,4 +118,12 @@ button:hover {
   border: 1px solid #a89a89;
   background: transparent;
   box-sizing: border-box;
+}
+.form_card {
+  width: 19%;
+}
+.disable {
+  pointer-events: none;
+  color: #83715b;
+  background-color: rgb(195 64 20 / 70%);
 }
