--- a/frontend/src/features/questions2/QuestionCard2.scss
+++ b/frontend/src/features/questions2/QuestionCard2.scss
@@ -122,3 +122,8 @@ button:hover {
 .form_card {
   width: 19%;
 }
+.disable {
+  pointer-events: none;
+  color: #83715b;
+  background-color: rgb(195 64 20 / 70%);
+}
