--- a/frontend/src/features/questions2/QuestionCard2.scss
+++ b/frontend/src/features/questions2/QuestionCard2.scss
@@ -127,3 +127,12 @@ button:hover {
   color: #83715b;
   background-color: rgb(195 64 20 / 70%);
 }
+.time {
+  width: 100%;
+  margin: 0.5em 0;
+}
+
+.quest {
+  width: 100%;
+  margin-bottom: 0.5em;
+}
