--- a/frontend/src/features/Main/MainPage.scss
+++ b/frontend/src/features/Main/MainPage.scss
@@ -112,6 +112,8 @@ button {
   padding: 0.5em 0;
   box-sizing: border-box;
   transition: 1s;
+  margin: auto;
+  width: 30%;
 }
 button:hover {
   color: #a89a89;
@@ -120,7 +122,7 @@ button:hover {
   box-sizing: border-box;
 }
 .form_card {
-  width: 19%;
+  width: 100%;
 }
 .disable {
   pointer-events: none;
